<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RoomCalendar</string>
    <string name="book_event_activity">Book Event</string>
    <string name="broadcast_action">com.thoughtworks.roomcalendar.SHOWCALENDAREVENTS</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="available">Available</string>
    <string name="event_name">Event Name:</string>
    <string name="new_line">\n</string>
    <string name="hyphen"> - </string>
    <string name="internet_unavailable">Internet connection not available</string>
    <string name="select_room">Select Room</string>
    <string name="tanjore_temple">Tanjore Temple</string>
    <string name="chennai">Chennai</string>
    <string name="organizer">Organizer:</string>
    <string name="email_id">email id</string>
    <string name="tw_addr">\@tw.com</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="thoughtworks">ThoughtWorks</string>


</resources>
